tienda-otel/manifests/otel/10-patch-apps-otel-endpoint.yaml
---
# ─────────────────────────────────────────────────────────────────
# Parche Deployment — producto-api
# Reemplaza la variable OTEL_EXPORTER_OTLP_ENDPOINT con el FQDN
# ─────────────────────────────────────────────────────────────────
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producto-api
  namespace: tienda-otel
spec:
  template:
    spec:
      containers:
        - name: producto-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pedido-api
  namespace: tienda-otel
spec:
  template:
    spec:
      containers:
        - name: pedido-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificacion-api
  namespace: tienda-otel
spec:
  template:
    spec:
      containers:
        - name: notificacion-api
